--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,6 +1,6 @@
 .Modal {
   max-width: 320px;
-  height: 450px;
+  height: 500px;
 
   display: flex;
   flex-wrap: wrap;
@@ -21,7 +21,7 @@
   justify-content: center;
   gap: 1rem;
   width: 100%;
-  margin-top: 1.2rem;
+  margin-top: 2.2rem;
 }
 
 .Modal label {
@@ -60,7 +60,8 @@
 }
 
 .Modal .heading h2 {
-  font-size: 2rem;
+  font-size: 1.6rem;
+  
   font-weight: 700;
 }
 
@@ -73,6 +74,7 @@
   box-shadow: unset;
 
   border-radius: 0px 10px 2px 10px;
+  margin: 0;
 }
 
 .Modal .heading button:hover {
@@ -84,13 +86,14 @@
   height: 2rem;
   border-radius: 0.5rem;
   
-  background: none;
+  background: rgba(0, 0,0 , 0.15);
+  
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.6);
   filter: brightness(1.2);
   font-size: 0.9rem;
   color: #fff;
   transition: box-shadow 0.2s;
-  
+  margin-top: 2rem;  
 
   cursor: pointer;
 }
